--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
+    "react-pose": "^4.0.10",
     "react-scripts": "3.4.1",
     "react-swipeable": "^5.5.1"
   },
