--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-pose": "^4.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-swipeable": "^5.5.1"
+    "react-swipeable": "^5.5.1",
+    "react-tooltip": "^4.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
